...
            delay(6000)
            viewModel.resetWarning()
        }
    }

    //sample data
//    val vehicleList = remember {
//        mutableStateListOf(
//            Vehicle("1", "Lucile", "BMW", "M3 Competition", 100000, 17, 8.0, true),
//            Vehicle("2", "Khaleesi", "Range Rover", "Sport", 50000, 10, 13.2, false),
//        )
//    }

    Scaffold(
        topBar = {
            YourTopBar(
                leftIcon = Icons.AutoMirrored.Filled.ArrowBack,
                rightIcon = Icons.Default.Settings,
                leftWord = "Your ",
                rightWord = "Vehicles",
                onLeftClick = { navController?.popBackStack() },
                onRightClick = { navController?.navigate(Screen.Settings.route) }
            )
        },
        bottomBar = {
            BottomNavBar(navController = navController, color = "none")
...
                                isDriver = viewModel.isDriver
                            )
                        }
                        if (!viewModel.isDriver) {
                            item {
                                AddVehicleButton(
                                    modifier = Modifier.testTag("buttonOpenAddVehicleDialog"),
                                    onClick = { showAddVehicleDialog = true }
                                )
                            }
                        }

                    }
...
    }

    //Remove Vehicle Confirm dialog
    vehicleToRemove?.let { vehicle ->
        AlertDialog(
            onDismissRequest = { vehicleToRemove = null },
            title = { Text("Remove Vehicle") },
            text = { Text("Are you sure you want to remove ${vehicle.name}? This action cannot be undone.") },
            confirmButton = {
                TextButton(
                    onClick = {
                        viewModel.removeVehicle(vehicle.id)
                        vehicleToRemove = null
                    },
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Red, contentColor = Color.White)
                ) {
                    Text("Remove")
                }
            },
            dismissButton = {
                TextButton(onClick = { vehicleToRemove = null }) {
                    Text("Cancel")
                }
...
