...
                        )
                        OutlinedTextField(
                            value = identifier,
                            onValueChange = { identifier=it },
                            placeholder = { Text("Email or Username", color = Color(0xFFBDBDBD)) },
                            isError = errorCode == "INVALID_CREDENTIALS",
                            modifier = Modifier.fillMaxWidth().height(50.dp).testTag("loginIdentifier"),
                            shape = RoundedCornerShape(8.dp),
                            singleLine = true
                        )

                    }

...
                        )
                        OutlinedTextField(
                            value = password,
                            onValueChange = { password=it },
                            isError = errorCode == "INVALID_PASSWORD",
                            placeholder = { Text("Password", color = Color(0xFFBDBDBD)) },
                            modifier = Modifier.fillMaxWidth().height(50.dp).testTag("loginPassword"),
                            shape = RoundedCornerShape(8.dp),
                            singleLine = true,
                            visualTransformation = if (passwordVisible) VisualTransformation.None
                            else PasswordVisualTransformation(),
                            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
                            trailingIcon = {
...
                        onClick = {
                            onLogin(identifier, password)
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(top = 8.dp)
                            .height(48.dp).testTag("loginButton"),
                        colors = ButtonDefaults.buttonColors(containerColor = Green), //Dark grey
                        shape = RoundedCornerShape(8.dp)
                    ) {
                        Text("Sign In", color = Color.White)
                    }

...
